// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge accept jsx as children 1`] = `
<span
  className="css-i4ctwy"
>
  <span>
    string
  </span>
</span>
`;

exports[`Badge danger 1`] = `
<span
  className="css-o307zd"
>
  danger
</span>
`;

exports[`Badge default 1`] = `
<span
  className="css-i4ctwy"
>
  default
</span>
`;

exports[`Badge outline 1`] = `
<span
  className="css-ml4yrq"
>
  outline
</span>
`;

exports[`Badge primary 1`] = `
<span
  className="css-361qnz"
>
  primary
</span>
`;

exports[`Badge success 1`] = `
<span
  className="css-xr9z4s"
>
  success
</span>
`;

exports[`Badge warning 1`] = `
<span
  className="css-19otvs4"
>
  warning
</span>
`;
